--- a/HaskellLatexFormatter.cabal
+++ b/HaskellLatexFormatter.cabal
@@ -19,15 +19,17 @@ library
                      , LatexFormatter
   build-depends:       base >= 4.7 && < 5
                      , mtl
+                     , parsec 
   default-language:    Haskell2010
 
 executable HaskellLatexFormatter-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -O1 -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , HaskellLatexFormatter
                      , mtl
+                     , parsec
   default-language:    Haskell2010
 
 test-suite HaskellLatexFormatter-test
